--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <button onclick="addThreeHome()">+3</button>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <h2 id="guestScore">0</h2>
                 <button onclick="addOneGuest()">+1</button>
                 <button onclick="addTwoGuest()">+2</button>
